--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <script src="http://d3js.org/topojson.v1.min.js"></script>
     <!-- I recommend you host this file on your own, since this will change without warning -->
     <script src="http://datamaps.github.io/scripts/datamaps.world.min.js?v=1"></script>
-    <div id="container" style="position: relative; width: 500px; height: 300px;"></div>
+    <div id="container" style="position: relative; width: 100%;"></div>
 </head>
 
 <body>
-    <div id="container" style="position: relative; width: 80%; max-height: 450px;"></div>
 
 
     <script>
@@ -26,16 +25,6 @@
         })
 
         map.arc([
-            {
-                origin: {
-                    latitude: 40.639722,
-                    longitude: 73.778889
-                },
-                destination: {
-                    latitude: 41.8781, 
-                    longitude: -87.6298
-                }
-            },
             {
                 origin: {
                     latitude: 30.194444,
@@ -51,13 +40,12 @@
 
         //bubbles, custom popup on hover template
         map.bubbles([
-            { name: 'Hot', latitude: 21.32, longitude: 5.32, radius: 10, fillKey: 'gt50' },
-            { name: 'Chilly', latitude: -25.32, longitude: 120.32, radius: 18, fillKey: 'lt50' },
-            { name: 'Hot again', latitude: 21.32, longitude: -84.32, radius: 8, fillKey: 'gt50' },
+            { ip: '49.88.112.71', latitude: 31.0449, longitude: 121.4012, radius: 10, fillKey: 'gt50' },
+
 
         ], {
             popupTemplate: function (geo, data) {
-                return "<div class='hoverinfo'>It is " + data.name + "</div>";
+                return "<div class='hoverinfo'> Random scrub:" + data.ip + "</div>";
             }
         });
     </script>
