random data parsed by map

--- a/index.html
+++ b/index.html
@@ -17,35 +17,40 @@
 
     <script>
         //basic map config with custom fills, mercator projection
+
+        
         var map = new Datamap({
             scope: 'world',
             element: document.getElementById('container'),
             projection: 'mercator',
-            height: 500,
+            responsive: true
         })
 
+
+        var dest =  {
+                    latitude: 41.84,
+                    longitude: -87.64
+                }
         map.arc([
             {
                 origin: {
-                    latitude: 30.194444,
-                    longitude: -97.67
+                    latitude: 50.34,
+                    longitude: -203.34
                 },
-                destination: {
-                    latitude: 25.793333,
-                    longitude: -0.290556
-                }
+                destination: dest
             }
         ], { strokeWidth: 2 });
 
 
+        var arcs = layer.selectAll('path.datamaps-arc').data( data, JSON.stringify);
+        arc.enter().transition().duration(2000).ease(Math.sqrt);
         //bubbles, custom popup on hover template
         map.bubbles([
-            { ip: '49.88.112.71', latitude: 31.0449, longitude: 121.4012, radius: 10, fillKey: 'gt50' },
-
+            { ip: '49.88.112.71', latitude: 41.84, longitude: -87.64, radius: 5, fillKey: 'gt50' },
 
         ], {
             popupTemplate: function (geo, data) {
-                return "<div class='hoverinfo'> Random scrub:" + data.ip + "</div>";
+                return "<div class='hoverinfo'> Random scrub: " + data.ip + "</div>";
             }
         });
     </script>
