--- a/index.html
+++ b/index.html
@@ -17,42 +17,72 @@
 
     <script>
         //basic map config with custom fills, mercator projection
+        function sleep(ms) {
+            return new Promise(resolve => setTimeout(resolve, ms));
+        }
+        var lineFadeTime = 2000;
+        var lineDrawTime = 850;
 
-        
-        var map = new Datamap({
-            scope: 'world',
-            element: document.getElementById('container'),
-            projection: 'mercator',
-            responsive: true
-        })
+        var dest = {
+            latitude: 41.84,
+            longitude: -87.64
+        }
 
+        var jsonStream = new EventSource('https://example.com/yourstreamingservice')
+        jsonStream.onmessage = function (e) {
+            var message = JSON.parse(e.data);
+            // handle message
+        };
 
-        var dest =  {
-                    latitude: 41.84,
-                    longitude: -87.64
-                }
-        map.arc([
-            {
-                origin: {
-                    latitude: 50.34,
-                    longitude: -203.34
-                },
-                destination: dest
+        //basic map config with custom fills, mercator projection
+        async function demo() {
+            var map = new Datamap({
+                scope: 'world',
+                element: document.getElementById('container'),
+                projection: 'mercator',
+                responsive: true
+            })
+
+            var arcs = [];
+            var bubbles = [];
+
+            // while still connected
+            var i = 0
+            while (i < 100) {
+                arcs.pop()
+                bubbles.pop()
+                bubbles.pop()
+                i++;
+                var lat = Math.random() * 180 + -90;
+                var longi = Math.random() * 360 + -180;
+                arcs.push({
+                    origin: {
+                        latitude: lat,
+                        longitude: longi
+                    },
+                    destination: dest
+                });
+
+                bubbles.push({ ip: '49.88.112.71', latitude: lat, longitude: longi, radius: 5, fillKey: 'gt50' });
+
+                bubbles.push({ ip: '49.88.112.71', latitude: dest["latitude"], longitude: dest["longitude"], radius: 5, fillKey: 'gt50' });
+
+                map.arc(arcs, { strokeWidth: 5 });
+                map.bubbles(bubbles, {
+                    popupTemplate: function (geo, data) {
+                        return "<div class='hoverinfo'> scrub from " + "country" + ": " + data.ip + "</div>";
+                    }
+                });
+                map.svg.selectAll('path.datamaps-arc').attr("opacity", 1);
+                map.svg.selectAll('path.datamaps-arc').transition().duration(5000).style("opacity", 0);
+                map.svg.selectAll('path.datamaps-arc').transition().delay(5000).remove();
+                //map.svg.selectAll('circle.datamaps-bubble').attr("opacity", 1);
+                //map.svg.selectAll('circle.datamaps-bubble').transition().duration//(1000).style("opacity", 0);
+                //map.svg.selectAll('circle.datamaps-bubble').transition().delay//(10000).remove();
+                await sleep(6000);
             }
-        ], { strokeWidth: 2 });
-
-
-        var arcs = layer.selectAll('path.datamaps-arc').data( data, JSON.stringify);
-        arc.enter().transition().duration(2000).ease(Math.sqrt);
-        //bubbles, custom popup on hover template
-        map.bubbles([
-            { ip: '49.88.112.71', latitude: 41.84, longitude: -87.64, radius: 5, fillKey: 'gt50' },
-
-        ], {
-            popupTemplate: function (geo, data) {
-                return "<div class='hoverinfo'> Random scrub: " + data.ip + "</div>";
-            }
-        });
+        }
+        demo();
     </script>
 </body>
 
